###############################################################################
# author: BrentHuang (guang11cheng@qq.com)
###############################################################################

###############################################################################
# sub dir
add_subdirectory(local_logic)
add_subdirectory(logics)
